Flask tut - finished password reset email

--- a/flask/app/templates/base.html
+++ b/flask/app/templates/base.html
@@ -5,6 +5,7 @@
     {% else %}
     <title>Welcome to Jurassic Bark</title>
     {% endif %}
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div>
